css/custom.css
#top-header{
    height: 100px;
    background: transparent url("/img/tree_bark.png") repeat scroll 0% 0%
}

#nav-header{
}

#site-footer{
    background-color: #463A34;
}

.wrapper{
    max-width: 960px;
    margin: 0 auto;
}

.wrapper-content{
    margin-top: -150px;
    background: #FFFFFF;
    padding: 12px;
}

.wrapper-content-small{
    margin-top: -400px;
    background: #FFFFFF;
    padding: 12px;
}

.banner{
    background: transparent url("/img/banner.jpg") no-repeat scroll bottom center / cover;
    margin-top: -20px;
    z-index: -1;
    /*min-height: 900px;*/
    border-bottom: solid 8px #D7D6E4;
    padding-bottom: 100px;
}

.banner-small{
    background: transparent url("/img/banner_1.jpg") no-repeat scroll center center / cover;
    margin-top: -20px;
    height: 500px;
}

.jumbotron-banner{
    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
    background: none;
    color: #F8F8F8;
}

.jumbotron-inner{
    background: rgba(0, 0, 0, 0.8);
    padding: 12px;
}

.bg-footer{
    background-color: #564740;
}
hr.style1 {
    width: 70%;
    color: #333;
    background-color: #333;
    height: 2px;
}
hr.style2 {
    width: 70%;
    color: #333;
    background-color: #333;
    height: 1px;
}

.nav-large .nav > li > a{
    font-size: 1.35em;
}
.navbar .navbar-nav {
    display: inline-block;
    float: none;
}

.navbar .navbar-collapse {
    text-align: center;
}

.thumbnail-caption {
    text-align: center;
}

.jumbotron {
    font-size: 18px;
}

.jumbotron p {
    font-size: 18px;
}

/* */
.article-image {
    max-width: 43%;
    max-height: 500px;
    float: left;
    margin: 0 3em 3em 0;
}

.article-image-full {
    width: 100%;
    max-height: 500px;
    float: left;
    margin: 0 3em 3em 0;
}

.article-logo {
    max-width: 43%;
    max-height: 100px;
    float: right;
    margin: 0 3em 3em 0;
}

.article-legend {
    margin-top: 2em;
    font-size: 85%;
    text-decoration: underline;
    font-weight: bold;
    color: #478c33;
    width: 50%;
}

.article-thumb {
    max-width: 100%;
    max-height: 300px;
    text-align: center;
    margin: 0 auto;
    display: block;
}

.img-thumbnail {
    max-height: 300px;
}

